feat(style): create theme extentions for fonts and colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @media (prefers-color-scheme: light) {
 }
 
 body {
-  @apply bg-gray-200
+  @apply bg-gray-200 font-sans;
 }
